--- a/selfie.css
+++ b/selfie.css
@@ -28,14 +28,14 @@ h2 {
 .left {
   margin-right: 10px;
   float: left;
-  width: 160px;
+  width: 45%;
   padding: 0px;
 }
 
 .right {
   margin-left: 10px;
   float: left;
-  width: 160px;
+  width: 45%;
   padding: 0px;
 }
 
